deployment/namespace.dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diginext-site
  labels:
    project: diginext-site
    owner: duy-nguyen-ngoc
    workspace: top-group

---
