deployment/namespace.prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-cli-prod
  labels:
    project: test-cli
    owner: duynguyen
    workspace: top-group-nlob

---
