deployment/deployment.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: diginext-site-dev
  labels:
    project: diginext-site
    owner: topgroup
    app: admin-2023-01-09-11-15-27
    main-app: admin
    phase: live
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - build.digitop.vn
      secretName: tls-secret-letsencrypt-diginext-site-admin
    - hosts:
        - diginext-site-admin.dev.diginext.site
      secretName: tls-secret-letsencrypt-diginext-site-admin
  rules:
    - host: build.digitop.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 3000
    - host: diginext-site-admin.dev.diginext.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: diginext-site-dev
  labels:
    app: admin-2023-01-09-11-15-27
    project: diginext-site
    owner: topgroup
    main-app: admin
    phase: live
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: admin-2023-01-09-11-15-27
  sessionAffinity: ClientIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-2023-01-09-11-15-27
  namespace: diginext-site-dev
  labels:
    project: diginext-site
    owner: topgroup
    app: admin-2023-01-09-11-15-27
    main-app: admin
    phase: live
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-2023-01-09-11-15-27
  template:
    metadata:
      labels:
        owner: topgroup
        app: admin-2023-01-09-11-15-27
        project: diginext-site
        main-app: admin
        phase: live
    spec:
      containers:
        - name: admin-2023-01-09-11-15-27
          image: asia.gcr.io/top-group-k8s/diginext-site/admin:2023-01-09-11-15-27
          ports:
            - containerPort: 3000
          resources: {}
      imagePullSecrets:
        - name: gcloud-docker-registry-key

---
