deployment/deployment.prerelease.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prerelease-admin
  namespace: diginext-site-prod
  labels:
    project: diginext-site
    owner: topgroup
    app: admin-2023-01-09-11-45-03
    main-app: admin
    phase: live
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: ''
spec:
  tls:
    - hosts:
        - diginext-site-admin.prerelease.diginext.site
      secretName: secret-diginext-site-admin-prerelease-diginext-site
  rules:
    - host: diginext-site-admin.prerelease.diginext.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-2023-01-09-11-45-03
                port:
                  number: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: admin-2023-01-09-11-45-03
  namespace: diginext-site-prod
  labels:
    app: admin-2023-01-09-11-45-03
    project: diginext-site
    owner: topgroup
    main-app: admin
    phase: prerelease
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: admin-2023-01-09-11-45-03
  sessionAffinity: ClientIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-2023-01-09-11-45-03
  namespace: diginext-site-prod
  labels:
    project: diginext-site
    owner: topgroup
    app: admin-2023-01-09-11-45-03
    main-app: admin
    phase: prerelease
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-2023-01-09-11-45-03
  template:
    metadata:
      labels:
        owner: topgroup
        app: admin-2023-01-09-11-45-03
        project: diginext-site
        main-app: admin
        phase: prerelease
    spec:
      containers:
        - name: admin-2023-01-09-11-45-03
          image: asia.gcr.io/top-group-k8s/diginext-site/admin:2023-01-09-11-45-03
          ports:
            - containerPort: 3000
          resources: {}
      imagePullSecrets:
        - name: gcloud-docker-registry-key

---
